--- a/templates/layouts/_footer.html
+++ b/templates/layouts/_footer.html
@@ -11,7 +11,7 @@
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                 <div class="text-md-right footer-links d-none d-sm-block">
                     <a href="javascript: void(0);">A propos de nous</a>
-                    <a href="javascript: void(0);">Support</a>
+                    <a href="javascript: void(0);">Supporter</a>
                     <a href="javascript: void(0);">Contacter</a>
                 </div>
             </div>
