contacter en contact

--- a/templates/layouts/_footer.html
+++ b/templates/layouts/_footer.html
@@ -12,7 +12,7 @@
                 <div class="text-md-right footer-links d-none d-sm-block">
                     <a href="javascript: void(0);">A propos de nous</a>
                     <a href="javascript: void(0);">Supporter</a>
-                    <a href="javascript: void(0);">Contacter</a>
+                    <a href="javascript: void(0);">Contact</a>
                 </div>
             </div>
         </div>
